Commit from LXDE Translation Project with Pootle by user brother.: 195 of 195 messages translated (0 fuzzy).

--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-08 22:52+0200\n"
-"PO-Revision-Date: 2012-07-07 01:06+0200\n"
+"PO-Revision-Date: 2012-07-09 18:49+0200\n"
 "Last-Translator: Martin <brother@bsnet.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -482,9 +482,8 @@ msgstr ""
 "Vill du utföra förändringarna rekursivt på alla filer och underkataloger?"
 
 #: ../src/gtk/fm-file-properties.c:624
-#, fuzzy
 msgid "<b>Access content:</b>"
-msgstr "<b>Åtkomstkontroll:</b>"
+msgstr "<b>Kan komma åt informationen:</b>"
 
 #: ../src/gtk/fm-file-properties.c:739
 msgid "Files of different types"
