--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-08 22:52+0200\n"
-"PO-Revision-Date: 2012-07-09 11:25+0200\n"
+"PO-Revision-Date: 2012-07-09 14:17+0200\n"
 "Last-Translator: Walter <wwycheuk@gmail.com>\n"
 "Language-Team: zh_TW <zh_TW@li.org>\n"
 "Language: zh_TW\n"
@@ -211,7 +211,7 @@ msgstr "無"
 
 #: ../data/ui/file-prop.glade.h:27
 msgid "Sticky"
-msgstr ""
+msgstr "駐留(Sticky)"
 
 #: ../data/ui/file-prop.glade.h:28
 msgid "Set GID"
@@ -219,7 +219,7 @@ msgstr "設定 GID"
 
 #: ../data/ui/file-prop.glade.h:29
 msgid "Sticky & set GID"
-msgstr "Sticky 及設定 GID"
+msgstr "駐留(Sticky)及設定 GID"
 
 #: ../data/ui/file-prop.glade.h:30
 msgid "Set UID"
